syntax = "proto3";

package pb;

option go_package = "./pb";

service DnsService {

}
