// Copyright 2021 Liuxiangchao iwind.liu@gmail.com. All rights reserved.

package nodes

import (
	"github.com/TeaOSLab/EdgeAPI/internal/rpc/services"
	"github.com/TeaOSLab/EdgeCommon/pkg/rpc/pb"
	"google.golang.org/grpc"
)

// 注册服务
func (this *APINode) registerServices(server *grpc.Server) {
	pb.RegisterAdminServiceServer(server, &services.AdminService{})
	pb.RegisterNodeGrantServiceServer(server, &services.NodeGrantService{})
	pb.RegisterServerServiceServer(server, &services.ServerService{})
	pb.RegisterNodeServiceServer(server, &services.NodeService{})
	pb.RegisterNodeClusterServiceServer(server, &services.NodeClusterService{})
	pb.RegisterNodeIPAddressServiceServer(server, &services.NodeIPAddressService{})
	pb.RegisterAPINodeServiceServer(server, &services.APINodeService{})
	pb.RegisterOriginServiceServer(server, &services.OriginService{})
	pb.RegisterHTTPWebServiceServer(server, &services.HTTPWebService{})
	pb.RegisterReverseProxyServiceServer(server, &services.ReverseProxyService{})
	pb.RegisterHTTPGzipServiceServer(server, &services.HTTPGzipService{})
	pb.RegisterHTTPHeaderPolicyServiceServer(server, &services.HTTPHeaderPolicyService{})
	pb.RegisterHTTPHeaderServiceServer(server, &services.HTTPHeaderService{})
	pb.RegisterHTTPPageServiceServer(server, &services.HTTPPageService{})
	pb.RegisterHTTPAccessLogPolicyServiceServer(server, &services.HTTPAccessLogPolicyService{})
	pb.RegisterHTTPCachePolicyServiceServer(server, &services.HTTPCachePolicyService{})
	pb.RegisterHTTPFirewallPolicyServiceServer(server, &services.HTTPFirewallPolicyService{})
	pb.RegisterHTTPLocationServiceServer(server, &services.HTTPLocationService{})
	pb.RegisterHTTPWebsocketServiceServer(server, &services.HTTPWebsocketService{})
	pb.RegisterHTTPRewriteRuleServiceServer(server, &services.HTTPRewriteRuleService{})
	pb.RegisterSSLCertServiceServer(server, &services.SSLCertService{})
	pb.RegisterSSLPolicyServiceServer(server, &services.SSLPolicyService{})
	pb.RegisterSysSettingServiceServer(server, &services.SysSettingService{})
	pb.RegisterHTTPFirewallRuleGroupServiceServer(server, &services.HTTPFirewallRuleGroupService{})
	pb.RegisterHTTPFirewallRuleSetServiceServer(server, &services.HTTPFirewallRuleSetService{})
	pb.RegisterDBNodeServiceServer(server, &services.DBNodeService{})
	pb.RegisterNodeLogServiceServer(server, &services.NodeLogService{})
	pb.RegisterHTTPAccessLogServiceServer(server, &services.HTTPAccessLogService{})
	pb.RegisterMessageServiceServer(server, &services.MessageService{})
	pb.RegisterMessageRecipientServiceServer(server, &services.MessageRecipientService{})
	pb.RegisterMessageReceiverServiceServer(server, &services.MessageReceiverService{})
	pb.RegisterMessageMediaServiceServer(server, &services.MessageMediaService{})
	pb.RegisterMessageRecipientGroupServiceServer(server, &services.MessageRecipientGroupService{})
	pb.RegisterMessageMediaInstanceServiceServer(server, &services.MessageMediaInstanceService{})
	pb.RegisterMessageTaskServiceServer(server, &services.MessageTaskService{})
	pb.RegisterMessageTaskLogServiceServer(server, &services.MessageTaskLogService{})
	pb.RegisterNodeGroupServiceServer(server, &services.NodeGroupService{})
	pb.RegisterNodeRegionServiceServer(server, &services.NodeRegionService{})
	pb.RegisterNodePriceItemServiceServer(server, &services.NodePriceItemService{})
	pb.RegisterServerGroupServiceServer(server, &services.ServerGroupService{})
	pb.RegisterIPLibraryServiceServer(server, &services.IPLibraryService{})
	pb.RegisterFileChunkServiceServer(server, &services.FileChunkService{})
	pb.RegisterFileServiceServer(server, &services.FileService{})
	pb.RegisterRegionCountryServiceServer(server, &services.RegionCountryService{})
	pb.RegisterRegionProvinceServiceServer(server, &services.RegionProvinceService{})
	pb.RegisterIPListServiceServer(server, &services.IPListService{})
	pb.RegisterIPItemServiceServer(server, &services.IPItemService{})
	pb.RegisterLogServiceServer(server, &services.LogService{})
	pb.RegisterDNSProviderServiceServer(server, &services.DNSProviderService{})
	pb.RegisterDNSDomainServiceServer(server, &services.DNSDomainService{})
	pb.RegisterDNSServiceServer(server, &services.DNSService{})
	pb.RegisterACMEUserServiceServer(server, &services.ACMEUserService{})
	pb.RegisterACMETaskServiceServer(server, &services.ACMETaskService{})
	pb.RegisterACMEAuthenticationServiceServer(server, &services.ACMEAuthenticationService{})
	pb.RegisterUserServiceServer(server, &services.UserService{})
	pb.RegisterServerDailyStatServiceServer(server, &services.ServerDailyStatService{})
	pb.RegisterUserBillServiceServer(server, &services.UserBillService{})
	pb.RegisterUserNodeServiceServer(server, &services.UserNodeService{})
	pb.RegisterLoginServiceServer(server, &services.LoginService{})
	pb.RegisterUserAccessKeyServiceServer(server, &services.UserAccessKeyService{})
	pb.RegisterSysLockerServiceServer(server, &services.SysLockerService{})
	pb.RegisterNodeTaskServiceServer(server, &services.NodeTaskService{})
	pb.RegisterNodeValueServiceServer(server, &services.NodeValueService{})
	pb.RegisterDBServiceServer(server, &services.DBService{})
	pb.RegisterServerRegionCityMonthlyStatServiceServer(server, &services.ServerRegionCityMonthlyStatService{})
	pb.RegisterServerRegionCountryMonthlyStatServiceServer(server, &services.ServerRegionCountryMonthlyStatService{})
	pb.RegisterServerRegionProvinceMonthlyStatServiceServer(server, &services.ServerRegionProvinceMonthlyStatService{})
	pb.RegisterServerRegionProviderMonthlyStatServiceServer(server, &services.ServerRegionProviderMonthlyStatService{})
	pb.RegisterServerClientSystemMonthlyStatServiceServer(server, &services.ServerClientSystemMonthlyStatService{})
	pb.RegisterServerClientBrowserMonthlyStatServiceServer(server, &services.ServerClientBrowserMonthlyStatService{})
	pb.RegisterServerHTTPFirewallDailyStatServiceServer(server, &services.ServerHTTPFirewallDailyStatService{})
	pb.RegisterDNSTaskServiceServer(server, &services.DNSTaskService{})
	pb.RegisterNodeClusterFirewallActionServiceServer(server, &services.NodeClusterFirewallActionService{})
	pb.RegisterMonitorNodeServiceServer(server, &services.MonitorNodeService{})
	pb.RegisterAuthorityKeyServiceServer(server, &services.AuthorityKeyService{})
	pb.RegisterAuthorityNodeServiceServer(server, &services.AuthorityNodeService{})
	pb.RegisterLatestItemServiceServer(server, &services.LatestItemService{})
	pb.RegisterNodeThresholdServiceServer(server, &services.NodeThresholdService{})
	pb.RegisterHTTPFastcgiServiceServer(server, &services.HTTPFastcgiService{})
	pb.RegisterNSClusterServiceServer(server, &services.NSClusterService{})
}
